# Mirage

./: .env  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DOCUMENTATION.md  LICENSE  README.md  altserver.py  backend.py  cli.py  client copy.py  client.py  client.spec  clientunsure.py  pyproject.toml  req.txt  requirements.txt  rooms.json  run.py  server.py  servers.json  test_api.py  tests.py  userinfo.json  userinfoo.json  userserverinfo.json
app/: __init__.py  config.py  db.py  store.py  utils.py
app/routes/: auth.py  chat.py  feed.py  inbox.py  misc.py  posts.py  upload.py  users.py
archive/pre/: README.md  cli.py  client.py  web_server.py
archive/pre-v2/: altclient.py
archive/pre-v2/static/: app.js  index.html  script.js
archive/pre-v2/static/css/: style.css
archive/pre-v2/templates/: index.html
archive/pre/templates/: profile.html
archive/unable to decrypt/: open_frontend.py  run.py
archive/unable to decrypt/frontend/: encryption.js  index.html
archive/unable to decrypt/mirage/: auth.py  main.py  websocket.py
archive/work/: server.py
client/: security.py
frontend/: encryption.js  index.html
fut_ui/: mirage_ui.htm  online_viewer_net (1).htm  style.css
mirage/: __init__.py  database.py  main.py  test_db.py
rooms/: test.txt
src/app/: client.py
src/backend/: server.py
src/configs/: userinfo.json
static/: app.js  index.html  servers.json  style.css
work/: client.py  requirements.txt
