[tool.poetry]
name = "mirage"
version = "0.1.0"
description = ""
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.100.0"
uvicorn = "^0.23.2"
pyjwt = "^2.6.0"
python-jose = "^3.0.1"
passlib = "^1.7.4"
python-dotenv = "^1.0.0"
python-multipart = "^0.0.6"
bcrypt = "^4.0.1"
requests = "^2.31.0"
websockets = "^10.3"
pyOpenSSL = "^23.2.0"
flask-socketio = "^5.3.6"
flask_cors = "^4.0.0"
markdown = "^3.4.1"
bleach = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"